--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,11 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+@relationships = Relationship.all
+
+@related = @relationships.where
+
+
+p_id && s_id match the reverse relationships || where tehy don't match the reverse relationships
+
